sandbox/output
AnagramTest.java:10: error: incompatible types: List<String> cannot be converted to String
        String result = anagram.generate("a");
                                        ^
AnagramTest.java:19: error: incompatible types: List<String> cannot be converted to String
        String result = anagram.generate("ab");
                                        ^
AnagramTest.java:29: error: incompatible types: List<String> cannot be converted to String
        String result = anagram.generate("abc");
                                        ^
3 errors
